[package]
name = "comic-flux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
dioxus = { version = "0.5.0-alpha.0", features = ["desktop"] }
image = "0.25.0"
rfd = "0.14.0"
zip = "0.6.6"
